err/aiml-bot-api.err
Listing '.'...
Listing './bin'...
Listing './doc'...
Listing './doc/aiml_bot'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AIML_Bot-0.0.3.dist-info'...
Listing './lib/python3.5/site-packages/AIML_Bot_API-0.0.dist-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_GraphQL-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Rx-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/aiml_bot'...
Listing './lib/python3.5/site-packages/aiml_bot_api'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/examples/starwars'...
Listing './lib/python3.5/site-packages/examples/starwars/tests'...
Listing './lib/python3.5/site-packages/examples/starwars/tests/snapshots'...
Listing './lib/python3.5/site-packages/examples/starwars_relay'...
Listing './lib/python3.5/site-packages/examples/starwars_relay/tests'...
Listing './lib/python3.5/site-packages/examples/starwars_relay/tests/snapshots'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_graphql'...
Listing './lib/python3.5/site-packages/graphene'...
Listing './lib/python3.5/site-packages/graphene/pyutils'...
Listing './lib/python3.5/site-packages/graphene/pyutils/tests'...
Listing './lib/python3.5/site-packages/graphene/relay'...
Listing './lib/python3.5/site-packages/graphene/relay/tests'...
Listing './lib/python3.5/site-packages/graphene/test'...
Listing './lib/python3.5/site-packages/graphene/tests'...
Listing './lib/python3.5/site-packages/graphene/tests/issues'...
Listing './lib/python3.5/site-packages/graphene/types'...
Listing './lib/python3.5/site-packages/graphene/types/tests'...
Listing './lib/python3.5/site-packages/graphene/utils'...
Listing './lib/python3.5/site-packages/graphene/utils/tests'...
Listing './lib/python3.5/site-packages/graphene-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/graphql'...
Listing './lib/python3.5/site-packages/graphql/error'...
Listing './lib/python3.5/site-packages/graphql/error/tests'...
Listing './lib/python3.5/site-packages/graphql/execution'...
Listing './lib/python3.5/site-packages/graphql/execution/executors'...
Listing './lib/python3.5/site-packages/graphql/execution/tests'...
Listing './lib/python3.5/site-packages/graphql/language'...
Listing './lib/python3.5/site-packages/graphql/language/tests'...
Listing './lib/python3.5/site-packages/graphql/pyutils'...
Listing './lib/python3.5/site-packages/graphql/pyutils/tests'...
Listing './lib/python3.5/site-packages/graphql/type'...
Listing './lib/python3.5/site-packages/graphql/type/tests'...
Listing './lib/python3.5/site-packages/graphql/utils'...
Listing './lib/python3.5/site-packages/graphql/utils/tests'...
Listing './lib/python3.5/site-packages/graphql/validation'...
Listing './lib/python3.5/site-packages/graphql/validation/rules'...
Listing './lib/python3.5/site-packages/graphql/validation/tests'...
Listing './lib/python3.5/site-packages/graphql_core-2.0.dist-info'...
Listing './lib/python3.5/site-packages/graphql_relay'...
Listing './lib/python3.5/site-packages/graphql_relay/connection'...
Listing './lib/python3.5/site-packages/graphql_relay/mutation'...
Listing './lib/python3.5/site-packages/graphql_relay/node'...
Listing './lib/python3.5/site-packages/graphql_relay-0.4.5.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/promise'...
Listing './lib/python3.5/site-packages/promise/pyutils'...
Listing './lib/python3.5/site-packages/promise/schedulers'...
Listing './lib/python3.5/site-packages/promise-2.1.egg-info'...
Listing './lib/python3.5/site-packages/rx'...
Listing './lib/python3.5/site-packages/rx/backpressure'...
Listing './lib/python3.5/site-packages/rx/concurrency'...
Listing './lib/python3.5/site-packages/rx/concurrency/mainloopscheduler'...
Listing './lib/python3.5/site-packages/rx/core'...
Listing './lib/python3.5/site-packages/rx/core/py2'...
Listing './lib/python3.5/site-packages/rx/core/py3'...
Listing './lib/python3.5/site-packages/rx/disposables'...
Listing './lib/python3.5/site-packages/rx/internal'...
Listing './lib/python3.5/site-packages/rx/joins'...
Listing './lib/python3.5/site-packages/rx/linq'...
Listing './lib/python3.5/site-packages/rx/linq/enumerable'...
Listing './lib/python3.5/site-packages/rx/linq/observable'...
Listing './lib/python3.5/site-packages/rx/linq/observable/blocking'...
Listing './lib/python3.5/site-packages/rx/subjects'...
Listing './lib/python3.5/site-packages/rx/testing'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/typing-3.6.2.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
